--- a/frontend/src/pages/PropertyDetail.css
+++ b/frontend/src/pages/PropertyDetail.css
@@ -1,6 +1,6 @@
 .property-detail {
   min-height: 100vh;
-  background: #fafafa;
+  background: #000;
 }
 
 .detail-hero {
@@ -525,7 +525,7 @@
   gap: 1rem;
   background: white;
   padding: 1rem;
-  border-radius: 12px;
+  border-radius: 20px;
   border: 1px solid #e0e0e0;
 }
 
@@ -699,8 +699,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(26, 26, 26, 0.6);
-  backdrop-filter: blur(3px);
+  background-color: #000;
+  /* background: rgba(26, 26, 26, 0.6); */
+  /* backdrop-filter: blur(3px); */
   /* -webkit-backdrop-filter: blur(4px); */
   padding: 1rem 2rem;
   display: flex;
